--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>KEYZ EDIT </h2>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit tempore provident qui ipsam facere ullam obcaecati omnis libero eligendi magni veniam fugit inventore nemo, earum illo molestias itaque labore sit.</P>
     
 </body>
 </html>
